# sentiment_prediction_backend

./: Dockerfile  Jenkinsfile  pyproject.toml
.github/workflows/: run_tests_.yml
src/api/handlers/: root_handler.py
src/api/models/: basic.py
tests/: test_root.py
