[tool.black]
line-length = 160

[tool.poetry]
name = "URFU_2022_GROUP_20_PROJECT"
version = "0.7.0"
description = "UrFU educational project"
authors = [
    "Vladimir Katin <katin.v.v.@gmail.com>",
    "Anna Bezhenar <asbezhenar@gmail.com>",
    "Anton Bessolitsyn <Anton.Bessolitsyn@hotmail.com>",
    "Alexander Orlov <eaglophone@gmail.com>"
]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/urfuMagDS2022SFgroup/sf_data_science_python"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.34.0"
numpy = "^1.25.2"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
importlib = "^1.0.4"
pyhamcrest = "^2.0.4"
torch = { version = "2.1.0", source = "torch" }


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pre-commit = "2.21.0"
flake8 = "6.1.0"
isort = "5.12.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"
pyhamcrest = "^2.0.4"



[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
